--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  rgangopadhya@ucla.edu
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
