--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Vulnerable Institutions
 email: rgangopadhya@ucla.edu
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about education and culture in America
-baseurl: "/polyblog" # the subpath of your site, e.g. /blog
+baseurl: /polyblog # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rg_merouan
 github_username:  rgangopadhya@ucla.edu
